refactor several APIs
